package batching.job

interface Job {
    fun execute()
}